--- a/feedback.html
+++ b/feedback.html
@@ -4,15 +4,12 @@
       <meta charset="UTF-8">
       <link rel="stylesheet" href="css/contacts.css">
       <link rel="stylesheet" href="css/style.css">
-      <script src="js/index.js"></script>
       <link class="pre_logo" rel="shortcut icon" href="img/blocks_second_color.png" type="image/x-icon">
       <link rel="preconnect" href="https://fonts.gstatic.com">    
       <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&amp;family=Roboto+Condensed:wght@700&amp;display=swap" rel="stylesheet">
       <link rel="preconnect" href="https://fonts.gstatic.com">
       <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
       <link href="https://fonts.googleapis.com/css2?family=Righteous&display=swap" rel="stylesheet">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Promtex</title>
@@ -75,15 +72,15 @@
          <div class="contacts__white-line"></div>
          <form> <!-- id="contact" method="POST" -->
            		<!-- Hidden Required Fields -->
-		<input type="hidden" name="project_name" value="Site Name">
-		<input type="hidden" name="admin_email" value="admin@mail.com">
-		<input type="hidden" name="form_subject" value="Form Subject">
+		<input type="hidden" name="project_name" value="Promtex">
+		<input type="hidden" name="admin_email" value="oleghryhorash@gmail.com">
+		<input type="hidden" name="form_subject" value="footer form">
 		<!-- END Hidden Required Fields -->
-            <input class="inf_email" type="text" name="Name" placeholder="Name:" required>
-            <input class="inf_email1" type="text" name="Surname" placeholder="E-mail:" required>
-            <input class="inf_email2" type="text" name="E-mail" placeholder="Phone Number:">
-            <input class="inf_email3" type="text" name="Phone" placeholder="Subject:">
-            <input class="inf_email4" type="text" name="Phone" placeholder="Message:" required><br>
+            <input type="text" name="Name" placeholder="Name:" required>
+            <input type="text" name="Surname" placeholder="E-mail:" required>
+            <input type="text" name="E-mail" placeholder="Phone Number:">
+            <input type="text" name="Phone" placeholder="Subject:">
+            <input type="text" name="Phone" placeholder="Message:" required><br>
             <!--<div class="send"></div>--><button>send</button>
          </form>
 
