--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <span class="flags"> UKR<img src="img/ukraine.png" alt="" class="flag">ENG<img src="img/united-kingdom.png" alt="" class="flag"></span>
     </section>
     <section class="section_mobile_1">
-        <input class="search none_dekstop" placeholder="search" id="question" type="text">
+        
        <div class="numbers">
         <span><a href="tel:+380956853048"><i class="fa fa-phone"></i>моб: +380 (95) 685-30-48</a> <img class="logo_phone" src="img/vodafone-logo.png" alt=""></span>
         <span><a href="tel:+380968883062"><i class="fa fa-user"></i>тел: +380 (96) 888-30-62</a> <img class="logo_phone" src="img/kyivstar-logo.png" alt=""></span>
@@ -184,7 +184,7 @@
         <article class="article__container_one">
             <h1 class="h1__pluses wow fadeInDown none" data-wow-duration="2s">ЧОМУ СЛІД ОБРАТИ САМЕ НАС?</h1>
             <p class="p__pluses wow fadeInDown none"  data-wow-duration="1s">Ми запровадили повний цикл виготовлених дитячих іграшок. Нашими головними критеріями при створенні продукції є безпека та якість, адже під час виробництва використовується лишень якісна та екологічна сировина. Усі товари з логотипом "Промтекс" принесуть лишень радість та позитивні емоції в дитячі серця</p>
-            <a class="a__pluses wow fadeInDown" href="about_us.html">БІЛЬШЕ ІНФОРМАЦІЇ ></a>    
+            <a class="a__pluses wow fadeInDown none" href="about_us.html">БІЛЬШЕ ІНФОРМАЦІЇ ></a>    
         </article>
         <article class="article__container_two">
             <div class="square__article">
@@ -201,8 +201,16 @@
             </div>
         </article>
     </div>
-    
+    <div class="article__container_fifth">
+        <article class="article__container_one none_dekstop">
+            <h1 class="h1__pluses wow fadeInDown" data-wow-duration="2s">ЧОМУ СЛІД ОБРАТИ САМЕ НАС?</h1>
+            <p class="p__pluses wow fadeInDown"  data-wow-duration="1s">Ми запровадили повний цикл виготовлених дитячих іграшок. Нашими головними критеріями при створенні продукції є безпека та якість, адже під час виробництва використовується лишень якісна та екологічна сировина. Усі товари з логотипом "Промтекс" принесуть лишень радість та позитивні емоції в дитячі серця</p>
+            <a class="a__pluses wow fadeInDown" href="about_us.html">БІЛЬШЕ ІНФОРМАЦІЇ ></a>    
+        </article>
+    </div>
 </div>
+
+
 <footer>
     <div class="contacts__footer">
         <h3 class="h3__footer wow fadeInDown">ПП "ПРОМТЕКС"</h3>
