--- a/products.html
+++ b/products.html
@@ -144,7 +144,7 @@
             </div>
             <div class="products__block products_none">
                 <div class="block__article_1 products_none">
-                    <a class="item" href="product_constructor.html">
+                    <a class="item left_side_product" href="product_constructor.html">
                         <img class="item" src="img/konstruktor.png" alt="">
                     </a>
                 <a class="item" href="product_pisok.html">
@@ -152,7 +152,7 @@
                 </a>
                  </div>
                  <div class="block__article_2 products_none">
-                <a class="item__product3 item" href="product_bubles.html">
+                <a class="item__product3 item left_side_product" href="product_bubles.html">
                     <img class="item" src="img/bulbashky.png" alt="">
                 </a>
                 <a class="item__product4 item" href="product_transport.html">
@@ -160,7 +160,7 @@
                 </a>
            </div>
             <div class="block__article_3 products_none">
-                <a class="item__product5 item" href="product_cube.html">
+                <a class="item__product5 item left_side_product" href="product_cube.html">
                     <img class="item" src="img/kubiky.png" alt="">
                 </a>
                 <a class="item__product6 item" href="product_mozaik.html">
@@ -168,7 +168,7 @@
                 </a>
                 </div>
                 <div class="block__article_4 products_none">
-                <a class="item__product7 item" href="product_domino.html">
+                <a class="item__product7 item left_side_product" href="product_domino.html">
                     <img class="item" src="img/domino.png" alt="">
                 </a>
                 <a class="item__product8 item" href="product_games.html">
