--- a/product_transport.html
+++ b/product_transport.html
@@ -191,7 +191,7 @@
             
             <div class="col-1-2">
               <div class="product-info">
-                <h2>АВТОМОБІЛЬ САМОСКИД</h2>
+                <h2>АВТОМОБІЛЬ САМОСКИД <br> З ПІСОЧНИМ НАБОРОМ</h2>
                 <div class="desc">
                   <table>
                     <tr>
