--- a/product_games.html
+++ b/product_games.html
@@ -133,7 +133,7 @@
         <div class="contacts__footer">
             <h3 class="h3__footer wow fadeInDown">ПП "ПРОМТЕКС"</h3>
             <section class="adress__footer">
-                <span><a href="#contact"><i class="fa fa-comment"></i> тел. +380 (96) 888-30-62</a></span>
+                <span><a href="#contact"><i class="fa fa-comment"></i> моб. +380 (96) 888-30-62</a></span>
                 <span><a href="emailto:support@websitename.com"><i class="fa fa-envelope"></i> promtex.toys@gmail.com</a></span>
                 <span><a href="tel:+380956853048"><i class="fa fa-phone"></i> моб. +380 (95) 685-30-48</a></span>
                 <a class="loc__footer" href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%91%D0%BE%D0%B3%D0%B4%D0%B0%D0%BD%D0%B0+%D0%9B%D0%B5%D0%BF%D0%BA%D0%BE%D0%B3%D0%BE,+16,+%D0%98%D0%B2%D0%B0%D0%BD%D0%BE-%D0%A4%D1%80%D0%B0%D0%BD%D0%BA%D0%BE%D0%B2%D1%81%D0%BA,+%D0%98%D0%B2%D0%B0%D0%BD%D0%BE-%D0%A4%D1%80%D0%B0%D0%BD%D0%BA%D0%BE%D0%B2%D1%81%D0%BA%D0%B0%D1%8F+%D0%BE%D0%B1%D0%BB%D0%B0%D1%81%D1%82%D1%8C,+76000/@48.9198898,24.7169739,17z/data=!3m1!4b1!4m5!3m4!1s0x4730c16ecad70a7b:0x3a71f7a2f8153180!8m2!3d48.9198898!4d24.7191626?hl=ru"></i><i class="fa fa-comment fa-left"></i>Україна, 76018, м. Івано-Франківськ, вул. Б. Лепкого, 16/2
