--- a/contacts.html
+++ b/contacts.html
@@ -196,8 +196,8 @@
             <a class="none" href="contacts.html">Контакти та умови співпраці</a>
             </div>
             
-            <button class="hr_but_padding"></button>
-            <div class="nav__footer schedule__footer">
+            <button class="hr_but_padding schedule_none"></button>
+            <div class="nav__footer schedule__footer schedule_none">
             <h3 class="h3__footer none wow fadeInDown">ГРАФІК РОБОТИ</h3>
             
                 <span>Понеділок 08:00 - 17:00</span>
