--- a/product_bubles.html
+++ b/product_bubles.html
@@ -182,7 +182,7 @@
                   </a>
               </section>
           </div>
-          <button></button>
+          <button class="schedule_none"></button>
           <div class="nav__footer">
           <h3 class="h3__footer none wow fadeInDown">ПУНКТИ МЕНЮ</h3>
           <a class="none" href="index.html">Головна</a>
