--- a/contacts.html
+++ b/contacts.html
@@ -113,7 +113,7 @@
       <div class="container__contacts">
       
          <div class="contacts__logo-h2">
-            <h2 class="logo__cont-h2">НАША АДРЕСА <h2>
+            <h2 class="logo__cont-h2">НАШІ ДАНІ <h2>
             <img class="logo__img-simple" src="img/cont_one.png" alt="">
          </div>
          
