--- a/product_constructor.html
+++ b/product_constructor.html
@@ -68,7 +68,7 @@
               
              <div class="numbers">
               <span><a href="tel:+380956853048"><i class="fa fa-phone"></i>моб: +380 (95) 685-30-48</a> <img class="logo_phone" src="img/vodafone-logo.png" alt=""></span>
-              <span><a href="tel:+380968883062"><i class="fa fa-user"></i>тел: +380 (96) 888-30-62</a> <img class="logo_phone kyivstar" src="img/kyivstar-logo.png" alt=""></span>
+              <span><a href="tel:+380968883062"><i class="fa fa-user"></i>моб: +380 (96) 888-30-62</a> <img class="logo_phone kyivstar" src="img/kyivstar-logo.png" alt=""></span>
           </div>    
           </section>
           <section class="section_mobile_3">
