--- a/contacts.html
+++ b/contacts.html
@@ -127,10 +127,10 @@
                <div class="content__block-contacts">
                   <h3 class="contacts__not-bold">ПП "ПРОМТЕКС"<br></h3>
                   <h3 class="contacts__not-bold">З питань співпраці<br> 
-                  <h3 class="contacts__not-bold">моб. <span> +380&nbsp;(95)&nbsp;685-30-48</span>
+                  <h3 class="contacts__not-bold">моб: <span> +380&nbsp;(95)&nbsp;685-30-48</span>
                      </h3>
                      <h3 class="contacts__not-bold">З усіх інших питань<br>
-                     <h3 class="contacts__not-bold">моб. <span>+380&nbsp;(96)&nbsp;888-30-62 </span>
+                     <h3 class="contacts__not-bold">моб- <span>+380&nbsp;(96)&nbsp;888-30-62 </span>
                      </h3>
                      
                   
