--- a/contacts.html
+++ b/contacts.html
@@ -126,7 +126,7 @@
                </div>
                <div class="content__block-contacts">
                   <h3 class="contacts__not-bold">ПП "ПРОМТЕКС"<br></h3>
-                  <h3 class="contacts__not-bold">моб. <span class="black_color"> +380 (95) 685-30-48</span></h3>
+                  <h3 class="contacts__not-bold">моб. <a class="black_color" href=""> &nbsp;+380&nbsp;(95)&nbsp;685-30-48 </a></h3>
                   <h3 class="contacts__not-bold">З питань співпраці<br> 
                      <h3 class="contacts__not-bold">моб. <a class="black_color" href=""> &nbsp;+380&nbsp;(96)&nbsp;888-30-62 </a></h3>
                      <h3 class="contacts__not-bold">З усіх інших питань<br>
