--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
                 <img src="img/services2.jpg" alt="">
             </article>
             <article class="article__container_fourth">
-                <h1 class="h1__services wow fadeInDown"  data-wow-duration="2s">МИ ПРОПОНУЄМО:</h1>
-                <p class="p__services wow fadeInDown"  data-wow-duration="1s">Широкий асортимент дитячих товарів у якому представленні розвиваючі та цікаві іграшки, які сприяють ранньому розвитку дитини. Кожна одиниця товару сертифікована, та відповідає усім вимогам діючого законодавства України.</p>
+                <h1 class="h1__services wow fadeInDown"  data-wow-duration="2s">МИ ПРОПОНУЄМО</h1>
+                <p class="p__services wow fadeInDown"  data-wow-duration="1s">&nbsp;&nbsp;&nbsp;Широкий асортимент дитячих товарів, де представлені розвиваючі цікаві іграшки, які сприяють ранньому розвитку дитини. Кожна одиниця товару сертифікована та відповідає усім вимогам діючого законодавства України.</p>
                 <a class="a__services wow fadeInDown" href="about_us.html">БІЛЬШЕ ІНФОРМАЦІЇ ></a>    
             </article>
         </div>
@@ -190,7 +190,7 @@
     <div class="our_pluses__container">
         <article class="article__container_one">
             <h1 class="h1__pluses wow fadeInDown none" data-wow-duration="2s">ЧОМУ СЛІД ОБРАТИ САМЕ НАС?</h1>
-            <p class="p__pluses wow fadeInDown none"  data-wow-duration="1s">Ми запровадили повний цикл виготовлених дитячих іграшок. Нашими головними критеріями при створенні продукції є безпека та якість, адже під час виробництва використовується лишень якісна та екологічна сировина. Усі товари з логотипом "Промтекс" принесуть лишень радість та позитивні емоції в дитячі серця</p>
+            <p class="p__pluses wow fadeInDown none"  data-wow-duration="1s">&nbsp;&nbsp;&nbsp;Ми запровадили повний цикл виготовлення дитячих іграшок. Нашими головними критеріями при створенні продукції є безпека та якість, адже під час виробництва використовується лише якісна та екологічно чиста сировина. Усі товари з логотипом "Промтекс" принесуть радість та позитивні емоції в дитячі серця!</p>
             <a class="a__pluses wow fadeInDown none" href="about_us.html">БІЛЬШЕ ІНФОРМАЦІЇ ></a>    
         </article>
         <article class="article__container_two">
