--- a/contacts.html
+++ b/contacts.html
@@ -170,7 +170,7 @@
          </div>
          <div class="contacts__green-line-imp"></div>
          <div class="conditions">
-            <p>Наша компанія запрошує до співпраці гуртових та дрібногуртових клієнтів. Для підбору актуальних цін на весь асортимент нашої продукції Вам потрібно зв'язатися з менеджером для отримання індивідуальної пропозиції по співпраці. При замовленні на суму від 15000 грн, ми здійснюємо безкоштовну доставку по всій території України.</p>
+            <p class="indent">Наша компанія запрошує до співпраці гуртових та дрібногуртових клієнтів. Для підбору актуальних цін на весь асортимент нашої продукції Вам потрібно зв'язатися з менеджером для отримання індивідуальної пропозиції по співпраці. При замовленні на суму від 15000 грн, ми здійснюємо безкоштовну доставку по всій території України.</p>
          </div>
 
 
