--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <a href="about_us.html">Про нас</a>
     <a class="nav_border_a" href="">|</a>
     <div class="dropdown">
-        <button class="dropbtn"><a href="products.html"> ПЕРЕЛІК ТОВАРІВ</a></button>
+       <a href="products.html"> ПЕРЕЛІК ТОВАРІВ</a>
         </div> 
         <a class="nav_border_a" href="">|</a>
     <a href="feedback.html">Зворотній зв'язок</a>
@@ -102,7 +102,7 @@
     <a href="about_us.html">Про нас</a>
     <a class="nav_border_a" href="">|</a>
     <div class="dropdown">
-        <button class="dropbtn"><a href="products.html"> Перелік товарів</a>
+       <a href="products.html"> Перелік товарів</a>
 
     
     </div>
