--- a/feedback.html
+++ b/feedback.html
@@ -18,7 +18,7 @@
       <title>Promtex</title>
    </head>
    <body>
-    <header id="main-header">
+    <header id="main-header" class="main-header__feedback">
 		<div class="container">
             
 			<h1 id="logo"><a href="index.html" class="cont_text_header2"><img class="logo_mobile_plane" src="img/plane_mobile.png" alt="">МЕНЮ</a></h1>
