--- a/product_transport.html
+++ b/product_transport.html
@@ -91,7 +91,7 @@
           <a href="about_us.html">Про нас</a>
           <a class="nav_border_a" href="">|</a>
           <div class="dropdown">
-              <button class="dropbtn"><a href="products.html"> ПЕРЕЛІК ТОВАРІВ</a></button>
+              <a href="products.html"> ПЕРЕЛІК ТОВАРІВ</a>
               </div> 
               <a class="nav_border_a" href="">|</a>
           <a href="feedback.html">Зворотній зв'язок</a>
@@ -108,7 +108,7 @@
           <a href="about_us.html">Про нас</a>
           <a class="nav_border_a" href="">|</a>
           <div class="dropdown">
-              <button class="dropbtn"><a href="products.html"> Перелік товарів</a>
+              <a href="products.html"> Перелік товарів</a>
       
           
           </div>
@@ -222,7 +222,7 @@
 
               <div class="large-5 column">
                   <div class="xzoom-thumbs">
-                    <a class="image_product" href="img/product_transport_3.jpg"><img class="xzoom-gallery image_product" src="img/product_transport_3.jpg"  xpreview="http://www.jqueryscript.net/demo/Feature-rich-Product-Gallery-With-Image-Zoom-xZoom/images/gallery/preview/01_b_car.jpg" title="The description goes here"></a>
+                    <a class="image_product" href="img/product_transport_2.jpg"><img class="xzoom-gallery image_product" src="img/product_transport_2.jpg"  xpreview="http://www.jqueryscript.net/demo/Feature-rich-Product-Gallery-With-Image-Zoom-xZoom/images/gallery/preview/01_b_car.jpg" title="The description goes here"></a>
                   </div>
                 </div>        
               </div>
