--- a/products.html
+++ b/products.html
@@ -89,7 +89,7 @@
         <a href="about_us.html">Про нас</a>
         <a class="nav_border_a" href="">|</a>
         <div class="dropdown">
-            <button class="dropbtn"><a href="products.html"> ПЕРЕЛІК ТОВАРІВ</a></button>
+            <a href="products.html"> ПЕРЕЛІК ТОВАРІВ</a>
             </div> 
             <a class="nav_border_a" href="">|</a>
         <a href="feedback.html">Зворотній зв'язок</a>
@@ -106,7 +106,7 @@
         <a href="about_us.html">Про нас</a>
         <a class="nav_border_a" href="">|</a>
         <div class="dropdown">
-            <button class="dropbtn"><a href="products.html"> Перелік товарів</a>
+           <a href="products.html"> Перелік товарів</a>
     
         
         </div>
