--- a/product_constructor.html
+++ b/product_constructor.html
@@ -138,7 +138,7 @@
 
               <div class="large-5 column">
                   <div class="xzoom-thumbs">
-                    <div class="container__img-holder">
+                    <div class="container__img-holder image_product">
                       <img class="image_product" src="img/product_constructor_full1.jpg" alt="Image">
                     </div>
                     <div class="img-popup">
@@ -191,8 +191,8 @@
   
                 <div class="large-5 column">
                     <div class="xzoom-thumbs">
-                      <div class="container__img-holder">
-                        <img class="image_product" src="https://images.pexels.com/photos/459225/pexels-photo-459225.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt="Image">
+                      <div class="container__img-holder image_product">
+                        <img class="image_product" src="img/product_constructor_full2.jpg" alt="Image">
                       </div>
                       <div class="img-popup">
     <img src="" alt="Popup Image">
