--- a/product_bubles.html
+++ b/product_bubles.html
@@ -135,14 +135,17 @@
 
               <div class="large-5 column">
                   <div class="xzoom-thumbs">
-                    <img id="myImg" src="img/product_bubles_1.jpg" >
-                   
-                    <div id="myModal" class="modal">
-                      <span class="close">X</span>
-                      <img class="modal-content" id="img01">
-                      <div id="caption"></div>
+                    <div class="container__img-holder image_product">
+                      <img class="image_product" src="img/product_constructor_full1.jpg" alt="Image">
                     </div>
-                  </div>
+                    <div class="img-popup">
+  <img src="" alt="Popup Image">
+  <div class="close-btn">
+    <div class="bar"></div>
+    <div class="bar"></div>
+  </div>
+  </div>
+  </div>
                  
                 </div>        
               </div>
@@ -222,23 +225,6 @@
 
 </div>
 <script>
-  /*window.onload = function(){
-    document.getElementById('close').onclick = function(){
-        this.parentNode.parentNode.remove();
-        return false;
-    };
-};
-
-
-
-function closeIt() {
-   var element = document.getElementById("close");
-   element.classList.add("cross");
-   window.location = "img/product_bubles_1.jpg";
-}
-*/
-// Get the modal
-
 var modal = document.getElementById('myModal');
 
 // Get the image and insert it inside the modal - use its "alt" text as a caption
