--- a/product_constructor.html
+++ b/product_constructor.html
@@ -250,13 +250,15 @@
         <div class="large-5 column">
           <div class="xzoom-thumbs">
             <div class="container__img-holder image_product">
-              <img class="image_product" src="img/product_constructor_full2.jpg" alt="Image">
+              <img class="image_product" src="img/product_constructor_full3.jpg" alt="Image">
             </div>
             <div class="img-popup">
 <img src="" alt="Popup Image">
 <div class="close-btn">
 <div class="bar"></div>
 <div class="bar"></div>
+</div>
+</div>
 </div>
 </div>
       </div>        
