--- a/product_cube.html
+++ b/product_cube.html
@@ -145,7 +145,7 @@
             
             <div class="col-1-2">
               <div class="product-info">
-                <h2>КУБИКИ «АБЕТКА УКРАЇНСЬКА»</h2>
+                <h2>КУБИКИ «АБЕТКА УКРАЇНСЬКА»<br> ДЛЯ ХЛОПЧИКІВ</h2>
                 <div class="desc">
                   <table>
                     <tr>
@@ -188,7 +188,7 @@
           
             <div class="col-1-2">
               <div class="product-info">
-                <h2>КУБИКИ «АБЕТКА УКРАЇНСЬКА»</h2>
+                <h2>КУБИКИ «АБЕТКА УКРАЇНСЬКА ДЛЯ»<br> ДЛЯ ДІВЧАТОК</h2>
                 <div class="desc">
                   <table>
                     <tr>
