--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             </article>
             <article class="article__container_fourth">
                 <h1 class="h1__services wow fadeInDown"  data-wow-duration="2s">МИ ПРОПОНУЄМО</h1>
-                <p class="p__services wow fadeInDown"  data-wow-duration="1s">Широкий асортимент дитячих товарів, де представлені розвиваючі цікаві іграшки, які сприяють ранньому розвитку дитини. Кожна одиниця товару сертифікована та відповідає усім вимогам діючого законодавства України.</p>
+                <p class="p__services wow fadeInDown"  data-wow-duration="1s">Широкий асортимент дитячих товарів, де представлені розвиваючі цікаві іграшки, які сприяють ранньому розвитку дитини. Кожна одиниця товару сертифікована та відповідає усім вимогам чинного законодавства України.</p>
                 <a class="a__services wow fadeInDown" href="about_us.html">БІЛЬШЕ ІНФОРМАЦІЇ ></a>    
             </article>
         </div>
