--- a/product_games.html
+++ b/product_games.html
@@ -169,7 +169,7 @@
                     </tr>
                   </table>  
                 </div>
-                <a href="feedback.html" class="button">Задати запитання</a>
+                <a href="feedback.html" class="button">Поставити запитання</a>
               </div>
               
             </div>
