--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <div class="first__inner-blur">
                    
                     <img class="wow fadeInUp main_logo_parallax" data-wow-delay="0.5s" data-wow-duration="2s" src="img/logo.png" alt=""></div>
-                    <h3 class="wow fadeInUp h3_main" data-wow-delay="1.1s" data-wow-duration="2s">Вітаємо Вас на сайті приватного підприємства Промтекс. Пропонуємо ознайомитися із продукцією, що виготовляється на нашому виробництві, та запрошуємо клієнтів до співпраці. </h3>
+                    <h3 class="wow fadeInUp h3_main" data-wow-delay="1.1s" data-wow-duration="2s">Вітаємо Вас на сайті приватного підприємства "Промтекс". Пропонуємо ознайомитися із продукцією, що виготовляється на нашому виробництві, та запрошуємо клієнтів до співпраці. </h3>
                     <img class="wow fadeInUp scroll_img" data-wow-delay="1.3s" data-wow-duration="2s" src="img/down-arrow.png" alt=""></div>
             </div>
         </div>
