--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header id="main-header">
             <div class="container">
                 
-                <h1 id="logo"><a href="index.html" class="cont_text_header2"><img class="logo_mobile_plane" src="img/plane_mobile.png" alt="">МЕНЮ</a></h1>
+                <h1 id="logo"><a href="index.html" class="cont_text_header2"><img class="logo_mobile_plane" src="img/plane_mobile.png" alt=""><i key="menu_cap" class="lang i_lang">МЕНЮ</i> </a></h1>
                 <input type="checkbox" id="nav-toggle" class="nav-toggle">
                 <nav id="menu">
                     <ul>
@@ -63,7 +63,7 @@
         <section class="section_mobile_1">
             
            <div class="numbers">
-            <span><a href="tel:+380956853048"><i class="fa fa-phone"></i><i class="i_lang lang" key="telephone2">моб: +380 (95) 685-30-48</i></a> <img class="logo_phone" src="img/vodafone-logo.png" alt=""></span>
+            <span><a href="tel:+380956853048"><i class="fa fa-phone"></i><i class="i_lang lang" key="telephone2">моб: +380 (95) 685-30-48</i></a> <img class="logo_phone phone_left" src="img/vodafone-logo.png" alt=""></span>
             <span><a href="tel:+380968883062"><i class="fa fa-user"></i> <i class="i_lang lang" key="telephone">моб: +380 (96) 888-30-62</i> </a> <img class="logo_phone" src="img/kyivstar-logo.png" alt=""></span>
         </div>    
         </section>
