--- a/products.html
+++ b/products.html
@@ -66,7 +66,7 @@
         <section class="section_mobile_1">
             
            <div class="numbers">
-            <span><a href="tel:+380956853048"><i class="fa fa-phone"></i><i class="i_lang lang" key="telephone2">моб: +380 (95) 685-30-48</i></a> <img class="logo_phone" src="img/vodafone-logo.png" alt=""></span>
+            <span><a href="tel:+380956853048"><i class="fa fa-phone"></i><i class="i_lang lang" key="telephone2">моб: +380 (95) 685-30-48</i></a> <img class="logo_phone phone_left" src="img/vodafone-logo.png" alt=""></span>
             <span><a href="tel:+380968883062"><i class="fa fa-user"></i> <i class="i_lang lang" key="telephone">моб: +380 (96) 888-30-62</i> </a> <img class="logo_phone" src="img/kyivstar-logo.png" alt=""></span>
         </div>    
         </section>
